@@ -100,9 +100,8 @@ package System.Garlic.Utils is
    --  Idem, but with the specific exception System.RPC.Communication_Error.
    --  If an alternate message is given, it will be used instead.
 
+   function Different (V1, V2 : String) return Boolean;
+   --  Compare two version ids. If one of these version ids is a string
+   --  of blank characters then they are identical.
+
 end System.Garlic.Utils;
-
-
-
-
-
